--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -50,7 +50,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - run: echo "ALL='${{ github.event.inputs }}'"
-      - run: echo "1='${{ github.event.inputs.apps }}'"
+      - run: echo "1='${{ fromJSON(github.event.inputs.apps) }}'"
       - run: echo "ENV-1?='$INPUT_ARG_ONE'"
         
 
