Update and rename playground.yml to stringfied-input.yml

--- a/.github/workflows/stringfied-input.yml
+++ b/.github/workflows/stringfied-input.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Playground CI
+name: Strigified Input CI
 
 # Controls when the workflow will run
 on:
