--- a/.github/workflows/multiline-secrets.yml
+++ b/.github/workflows/multiline-secrets.yml
@@ -27,36 +27,36 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: echo secret
-        run: echo ${{ secrets.TEST_MULTILINE_SECRET }}
+        run: echo "${{ secrets.TEST_MULTILINE_SECRET }}"
 
       # Runs a set of commands using the runners shell
       - name: Set output
         id: set-output-1
-        run: echo ::set-output name=one::BEGIN/${{ secrets.TEST_MULTILINE_SECRET }}/END
+        run: echo ::set-output name=one::"BEGIN/${{ secrets.TEST_MULTILINE_SECRET }}/END"
       
       - name: Set output
         id: set-output-2
-        run: echo ::set-output name=two::${{ secrets.TEST_MULTILINE_SECRET }}
+        run: echo ::set-output name=two::"${{ secrets.TEST_MULTILINE_SECRET }}"
         
       - name: print one nothing
-        run: echo ${{ steps.set-output-1.outputs.one }}
+        run: echo "${{ steps.set-output-1.outputs.one }}"
         
       - name: print one with
         run: echo ${{ format('BEGIN/{0}/END', steps.set-output-1.outputs.one) }}
         
       - name: print two nothing
-        run: echo ${{ steps.set-output-2.outputs.two }}
+        run: echo "${{ steps.set-output-2.outputs.two }}"
         
       - name: print two with
-        run: echo ${{ format('BEGIN/{0}/END', steps.set-output-2.outputs.two) }}
+        run: echo "${{ format('BEGIN/{0}/END', steps.set-output-2.outputs.two) }}"
         
       - name: base64 encode
         id: base64-encode
         run: |
-          echo ${{ secrets.TEST_MULTILINE_SECRET }} | base64
-          echo ::set-output name=encoded::$(echo ${{ secrets.TEST_MULTILINE_SECRET }} | base64)
+          echo "${{ secrets.TEST_MULTILINE_SECRET }}" | base64
+          echo ::set-output name=encoded::$(echo "${{ secrets.TEST_MULTILINE_SECRET }}" | base64)
         
       - name: base64 decode
         run: |
-          echo ${{ secrets.TEST_MULTILINE_SECRET }} | base64 | base64 --decode
+          echo "${{ secrets.TEST_MULTILINE_SECRET }}" | base64 | base64 --decode
           echo ${{ steps.base64-encode.outputs.encoded }} | base64 --decode
