--- a/.github/workflows/multiline-secrets.yml
+++ b/.github/workflows/multiline-secrets.yml
@@ -55,8 +55,12 @@ jobs:
         run: |
           echo "${{ secrets.TEST_MULTILINE_SECRET }}" | base64
           echo ::set-output name=encoded::$(echo "${{ secrets.TEST_MULTILINE_SECRET }}" | base64)
-        
-      - name: base64 decode
+          
+      - name: json base64
         run: |
-          echo "${{ secrets.TEST_MULTILINE_SECRET }}" | base64 | base64 --decode
-          echo ${{ steps.base64-encode.outputs.encoded }} | base64 --decode
+          echo ${{ toJSON(secrets.TEST_MULTILINE_SECRET) }}
+          echo "${{ toJSON(secrets.TEST_MULTILINE_SECRET) }}"
+          echo ${{ toJSON(secrets.TEST_MULTILINE_SECRET) }} | base64
+          echo "${{ toJSON(secrets.TEST_MULTILINE_SECRET) }}" | base64
+          echo ${{ toJSON(secrets.TEST_MULTILINE_SECRET) }} | base64 | base64 --decode
+          echo "${{ toJSON(secrets.TEST_MULTILINE_SECRET) }}" | base64 | base64 --decode
