--- a/.github/workflows/multiline-file.yml
+++ b/.github/workflows/multiline-file.yml
@@ -30,27 +30,27 @@ jobs:
         run: echo "-- BEGIN RSA --\ntest-line-one\n-test-line-two\ntest-line-3\n--- END RSA ---" > t.txt
         
       - name: setup output 1
-        id: 1
+        id: one
         run: echo ::set-output name=out::$(cat t.txt)
         
       - name: setup output 2
-        id: 2
+        id: two
         run: echo ::set-output name=out::"$(cat t.txt)"
       
       - name: print one
         run: |
-          echo ${{ steps.1.outputs.out }}
-          echo "${{ steps.1.outputs.out }}"
-          echo ${{ format('{0}', steps.1.outputs.out) }}
-          echo ${{ toJSON(steps.1.outputs.out) }}
-          echo "${{ toJSON(steps.1.outputs.out) }}"
-          echo ${{ toJSON(format('{0}', steps.1.outputs.out)) }}
+          echo ${{ steps.one.outputs.out }}
+          echo "${{ steps.one.outputs.out }}"
+          echo ${{ format('{0}', steps.one.outputs.out) }}
+          echo ${{ toJSON(steps.one.outputs.out) }}
+          echo "${{ toJSON(steps.one.outputs.out) }}"
+          echo ${{ toJSON(format('{0}', steps.one.outputs.out)) }}
           
       - name: print two
         run: |
-          echo ${{ steps.2.outputs.out }}
-          echo "${{ steps.2.outputs.out }}"
-          echo ${{ format('{0}', steps.2.outputs.out) }}
-          echo ${{ toJSON(steps.2.outputs.out) }}
-          echo "${{ toJSON(steps.2.outputs.out) }}"
-          echo ${{ toJSON(format('{0}', steps.2.outputs.out)) }}
+          echo ${{ steps.two.outputs.out }}
+          echo "${{ steps.two.outputs.out }}"
+          echo ${{ format('{0}', steps.two.outputs.out) }}
+          echo ${{ toJSON(steps.two.outputs.out) }}
+          echo "${{ toJSON(steps.two.outputs.out) }}"
+          echo ${{ toJSON(format('{0}', steps.two.outputs.out)) }}
