--- a/.github/workflows/multiline-file.yml
+++ b/.github/workflows/multiline-file.yml
@@ -28,6 +28,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: post to beeceptor
         run: |
-          SSHP=${{ secrets.TEST_MULTILINE_SECRET }}
+          SSHP=${{ toJSON(secrets.TEST_MULTILINE_SECRET) }}
           curl -v -X POST 'https://ghaction.free.beeceptor.com/my/api/path' -d $SSHP
-          curl -v -X POST 'https://ghaction.free.beeceptor.com/my/api/path' -d ${{ secrets.TEST_MULTILINE_SECRET }}
+          curl -v -X POST 'https://ghaction.free.beeceptor.com/my/api/path' -d ${{ toJSON(secrets.TEST_MULTILINE_SECRET) }}
