--- a/.github/workflows/multiline-file.yml
+++ b/.github/workflows/multiline-file.yml
@@ -24,27 +24,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-#       - name: post to beeceptor
-#         run: |
-#           curl -v -X POST 'https://ghaction.free.beeceptor.com/my/api/path' -d "${{ secrets.KEY_INLINE }}"
-#           curl -v -X POST 'https://ghaction.free.beeceptor.com/my/api/path' -d ${{ toJSON(secrets.KEY_MULTILINE) }}
-
-      - name: test 1
-        if: always()
+      - name: test
+        env:
+          SSH_PRIVATE_KEY: ${{ toJSON(secrets.KEY_MULTILINE) }}
         run: |
-          echo ${{ secrets.KEY_MULTILINE }}
-          echo "${{ secrets.KEY_MULTILINE }}"
-      
-      - name: test 2
-        if: always()
-        run: |
-          echo ${{ toJSON(secrets.KEY_MULTILINE) }}
-          echo ${{ fromJSON(toJSON(secrets.KEY_MULTILINE)) }}
-          
-      - name: test 3
-        if: always()
-        run: |
-          echo ${{ fromJSON(secrets.KEY_MULTILINE) }}
-          echo ${{ toJSON(fromJSON(secrets.KEY_MULTILINE)) }}
+          echo ${{ env.SSH_PRIVATE_KEY }}
+          echo ${SSH_PRIVATE_KEY}
