--- a/.github/workflows/multiline-file.yml
+++ b/.github/workflows/multiline-file.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: test
         env:
-          SSH_PRIVATE_KEY: ${{ toJSON(secrets.KEY_MULTILINE) }}
+          SSH_PRIVATE_KEY: ${{ secrets.KEY_MULTILINE }}
         run: |
           echo ${{ env.SSH_PRIVATE_KEY }}
           echo ${SSH_PRIVATE_KEY}
