--- a/.github/workflows/dotenv.yml
+++ b/.github/workflows/dotenv.yml
@@ -24,9 +24,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Load dotenv file
-        uses: falti/dotenv-action@master
-        with:
-          path: .env.example
+        run: export $(cat .env.example | xargs)
 
       # Runs a set of commands using the runners shell
       - name: Debug
