--- a/.github/workflows/dotenv.yml
+++ b/.github/workflows/dotenv.yml
@@ -24,7 +24,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Load dotenv file
-        run: export $(cat .env.example | xargs)
+        env:
+          ENV_FILE: .env.example
+        run: |
+          while read line; do
+            echo "$line" >> $GITHUB_ENV
+          done < ${{ env.ENV_FILE }}
 
       # Runs a set of commands using the runners shell
       - name: Debug
