--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -10,12 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VAR: value
-      VAR1: ${{ env.VAR }}
-      VAR2: $VAR
+      VAR2: ($VAR)
     steps:
       - name: var
         run: echo ${{ env.VAR }} | $VAR
-      - name: var1
-        run: echo ${{ env.VAR1 }} | $VAR1
       - name: var2
         run: echo ${{ env.VAR2 }} | $VAR2
