--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,13 +1,23 @@
 name: Test Workflow
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
+    inputs:
+      environment:
+        description: The environment to deploy to
+        type: choice
+        options:
+          - staging
+          - production
+        default: staging
+        required: true
 
 jobs:
   step1:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        environment: ${{ [github.event.inputs.environment || 'staging'] }}
     env:
       VAR: value
       VAR2: ($VAR)
