--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -9,9 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ARR1: ${{ '["auth","graphql","note","notification","sticky","survey"]' }}
-      ARR2: ${{ fromJSON('["auth","graphql","note","notification","sticky","survey"]') }}
     steps:
       - run: echo ${{ env.ARR1 }}
-      - run: echo ${{ env.ARR2 }}
       - run: echo $ARR1
-      - run: echo $ARR2
+      - run: echo ${{ fromJSON('["auth","graphql","note","notification","sticky","survey"]') }}
+      - run: echo ${{ fromJSON(env.ARR1) }}
