--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - run: echo $ARR
       - run: |
-          ARR2=${{ env.ARR }}
-          for elem in "${ARR2[@]}"; do echo $elem ; done
+          ARR=${{ env.ARR }}
+          for elem in "${ARR[@]}"; do echo $elem ; done
